--- a/CursoNDDigital/MedindoAFebreIII/MedindoAFebreIII.csproj
+++ b/CursoNDDigital/MedindoAFebreIII/MedindoAFebreIII.csproj
@@ -46,8 +46,8 @@
     <Compile Include="Exercícios Fixação\Execicio05_AnosBissextos.cs" />
     <Compile Include="Exercícios Fixação\Execicio07_Prestacao.cs" />
     <Compile Include="Exercícios Fixação\Execicio08_Carros.cs" />
-    <Compile Include="Exercícios Fixação\Execicios02_SomarVetores.cs" />
-    <Compile Include="Exercícios Fixação\Execicios04_Temperatura.cs" />
+    <Compile Include="Exercícios Fixação\Execicio02_SomarVetores.cs" />
+    <Compile Include="Exercícios Fixação\Execicio04_Temperatura.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
