--- a/CursoNDDigital/MedindoAFebre/MedindoAFebre.csproj
+++ b/CursoNDDigital/MedindoAFebre/MedindoAFebre.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E1C8F1E3-3A68-44EC-9698-5DBA95DC5D83}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{329376E6-F85F-4B5F-A09A-E2BB7B8F032F}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UNIDADE_VI</RootNamespace>
-    <AssemblyName>UNIDADE VI</AssemblyName>
+    <RootNamespace>MedindoAFebre</RootNamespace>
+    <AssemblyName>MedindoAFebre</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,25 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Operadores.cs" />
-    <Compile Include="Exercícios Fixação\Execicios01_Numeros.cs" />
-    <Compile Include="Exercícios Fixação\Execicios03_NascimentoExtenso.cs" />
-    <Compile Include="Exercícios Fixação\Execicios05_AnosBissextos.cs" />
-    <Compile Include="Exercícios Fixação\Execicios06_Prestacao.cs" />
-    <Compile Include="Exercícios Fixação\Execicios07_Carros.cs" />
-    <Compile Include="Exercícios Fixação\Execicios02_SomarVetores.cs" />
-    <Compile Include="Exercícios Fixação\Execicios04_Temperatura.cs" />
-    <Compile Include="Exercícios Fixação\Exercicio08_Corretores.cs" />
-    <Compile Include="Exercícios Fixação\Exercicio09_VelorMaior.cs" />
-    <Compile Include="Exercícios Fixação\Exercicio10_Loja.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="Exercícios Complementares\Exercícios complementares - Unidade VI.docx" />
-    <None Include="Exercícios Fixação\Exercícios - Unidade VI.docx" />
+    <None Include="Unidades\Medindo a Febre - UNIDADE I e II.pdf" />
+    <None Include="Unidades\Medindo a Febre - UNIDADE III.pdf" />
+    <None Include="Unidades\Medindo a Febre - UNIDADE V e VI.pdf" />
+    <None Include="Unidades\Medindo a Febre - UNIDADE VI parte II.pdf" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
