--- a/CursoNDDigital/UNIDADE VII/UNIDADE VII.csproj
+++ b/CursoNDDigital/UNIDADE VII/UNIDADE VII.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Operadores.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
