Implementação dos exercicios de slide 8,9,10. Adicionando a lista de exercicios VII.

--- a/CursoNDDigital/UNIDADE VII/UNIDADE VII.csproj
+++ b/CursoNDDigital/UNIDADE VII/UNIDADE VII.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ExerciosFixacao\Exercícios - Unidade VII.docx" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
