--- a/CursoNDDigital/UNIDADE VII/UNIDADE VII.csproj
+++ b/CursoNDDigital/UNIDADE VII/UNIDADE VII.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExerciciosSlide\ExerciciosSlide.cs" />
+    <Compile Include="ExerciosFixacao\BiroBiro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
