--- a/CursoNDDigital/MedindoAFebreVI/MedindoAFebreVI.csproj
+++ b/CursoNDDigital/MedindoAFebreVI/MedindoAFebreVI.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E7F665F-BCB5-40E8-851C-66442099A287}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{71BA8B2F-0BE8-46FB-B48E-BB55ADE46EFF}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Slides</RootNamespace>
-    <AssemblyName>Slides</AssemblyName>
+    <RootNamespace>MedindoAFebreVI</RootNamespace>
+    <AssemblyName>MedindoAFebreVI</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,17 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Unidades\Módulo I - Unidade I - Apresentação.docx.pptx" />
-    <None Include="Unidades\Módulo I - Unidade II - Apresentação.docx.pptx" />
-    <None Include="Unidades\Módulo I - Unidade III - Apresentação.docx.pptx" />
-    <None Include="Unidades\Módulo I - Unidade IV - Apresentação.docx.pptx" />
-    <None Include="Unidades\Módulo I - Unidade V - Apresentação.pptx" />
-    <None Include="Unidades\Módulo I - Unidade VI - Apresentação.pptx" />
-    <None Include="Unidades\Módulo I - Unidade VII - Apresentação.pptx" />
-    <None Include="Unidades\Módulo I - Unidade VIII - Apresentação.pptx" />
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
