--- a/CursoNDDigital/MedindoAFebreVI/MedindoAFebreVI.csproj
+++ b/CursoNDDigital/MedindoAFebreVI/MedindoAFebreVI.csproj
@@ -41,11 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Medindo a Febre - UNIDADE VIII.docx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
