Slide Unidade VIII,  adicionado no repositório

--- a/CursoNDDigital/Slides/Slides.csproj
+++ b/CursoNDDigital/Slides/Slides.csproj
@@ -46,6 +46,7 @@
     <None Include="Unidades\Módulo I - Unidade II - Apresentação.docx.pptx" />
     <None Include="Unidades\Módulo I - Unidade III - Apresentação.docx.pptx" />
     <None Include="Unidades\Módulo I - Unidade IV - Apresentação.docx.pptx" />
+    <None Include="Unidades\Módulo I - Unidade IX - Apresentação.pptx" />
     <None Include="Unidades\Módulo I - Unidade V - Apresentação.pptx" />
     <None Include="Unidades\Módulo I - Unidade VI - Apresentação.pptx" />
     <None Include="Unidades\Módulo I - Unidade VII - Apresentação.pptx" />
