--- a/CursoNDDigital/UNIDADE IX/UNIDADE IX.csproj
+++ b/CursoNDDigital/UNIDADE IX/UNIDADE IX.csproj
@@ -47,7 +47,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="ExercicioFixacao\Exercícios - Unidade IX.docx" />
+    <None Include="ExerciciosComplementares\Exercícios Complementares - Unidade IX.docx" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
