Editando banco de dados e adicionando os exercicios.

--- a/CursoNDDigital/UNIDADE XII/UNIDADE XII.csproj
+++ b/CursoNDDigital/UNIDADE XII/UNIDADE XII.csproj
@@ -61,10 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ExerciciosFixacao\Exercícios - Unidade XII.docx" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ExerciciosFixacao\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Banco\CursoDB.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
