Adicionando trabalho de SQL no repositorio.

--- a/CursoNDDigital/UNIDADE XII/UNIDADE XII.csproj
+++ b/CursoNDDigital/UNIDADE XII/UNIDADE XII.csproj
@@ -63,6 +63,7 @@
     <None Include="App.config" />
     <None Include="ExerciciosComplementares\Exercícios Complementares - Unidade XII.docx" />
     <None Include="ExerciciosFixacao\Exercícios - Unidade XII.docx" />
+    <None Include="Trabalho\Trabalho SQL.docx" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
