--- a/CursoNDDigital/UNIDADE_COMPLEMENTAR/UNIDADE_COMPLEMENTAR.csproj
+++ b/CursoNDDigital/UNIDADE_COMPLEMENTAR/UNIDADE_COMPLEMENTAR.csproj
@@ -52,8 +52,9 @@
     <None Include="App.config" />
     <None Include="Colecoes\Exercícios - Coleções.docx" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Web\" />
+    <Content Include="Web\ExemplosHTML.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
